--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,7 @@
         text-decoration: none;
         display: block;
         margin: auto;
-        width: 5%;
+        width: auto;
         font-family: "Verdana", sans-serif
     }
 
