--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,7 @@
         text-decoration: none;
         display: block;
         margin: auto;
-        width: auto;
+        width: 25%;
         font-family: "Verdana", sans-serif
     }
 
