--- a/stylesheet.css
+++ b/stylesheet.css
@@ -208,6 +208,8 @@
         border: 10px;
     }
     p.centered_text_paragraph_full_page {
+        margin: auto;
+        padding: 0;
         width: 90%;
     }
 }
