--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -184,7 +184,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -280,7 +280,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -376,7 +376,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -474,7 +474,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -572,7 +572,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -670,7 +670,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -766,7 +766,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -864,7 +864,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -962,7 +962,7 @@
         background-color: black
     }
 
-    body {
+    html {
         overflow-x: hidden;
         overflow-y: auto;
     }
