--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,9 +88,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -184,9 +184,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -280,9 +280,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -376,9 +376,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -474,9 +474,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -572,9 +572,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -670,9 +670,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -766,9 +766,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -864,9 +864,9 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -962,8 +962,8 @@
         background-color: black
     }
 
-    html {
+    body {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
