--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,6 +89,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -185,6 +186,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -281,6 +283,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -377,6 +380,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -475,6 +479,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -573,6 +578,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -671,6 +677,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -767,6 +774,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -865,6 +873,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -963,6 +972,7 @@
     }
 
     body {
+        width: calc(100vw-34px);
         overflow-x: hidden;
         overflow-y: auto;
     }
