--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,6 +89,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -186,6 +187,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -283,6 +285,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -380,6 +383,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -479,6 +483,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -578,6 +583,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -677,6 +683,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -774,6 +781,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -873,6 +881,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
@@ -972,6 +981,7 @@
     }
 
     body {
+        float: left;
         width: 101%;
         overflow-x: hidden;
         overflow-y: auto;
