--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -186,7 +186,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -284,7 +284,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -382,7 +382,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -482,7 +482,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -582,7 +582,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -682,7 +682,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -780,7 +780,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -880,7 +880,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
@@ -980,7 +980,7 @@
         background-color: black
     }
 
-    body {
+    html {
         float: left;
         width: 101%;
         overflow-x: hidden;
