--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,9 +88,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -186,9 +184,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -284,9 +280,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -382,9 +376,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -482,9 +474,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -582,9 +572,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -682,9 +670,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -780,9 +766,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -880,9 +864,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
@@ -980,9 +962,7 @@
         background-color: black
     }
 
-    html {
-        float: left;
-        width: 101%;
+    body {
         overflow-x: hidden;
         overflow-y: auto;
     }
